--- a/lab_2/index.html
+++ b/lab_2/index.html
@@ -4,7 +4,7 @@
     <title>laba2</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/style.css" rel="stylesheet" type="text/css">
     <script src="static/js/main.js"></script>
